@@ -3,6 +3,8 @@ What's New in IDLE 1.2c1?
 
 *Release date: XX-XXX-2006*
 
+- EditorWindow.test() was failing.  Bug 1417598
+
 - EditorWindow failed when used stand-alone if sys.ps1 not set.
   Bug 1010370 Dave Florek
 
